boinc (4.71-1) UNRELEASED; urgency=low

  * NOT RELEASED YET
  * New upstream release.
  * The boinc-client package now includes the boinc_cmd program, a command
    tool that provides an interactive command-line interface to the BOINC
    core client.
  * debian/control.in:
    - Added libwxgtk2.6-dev to Build-Depends and enabled the boinc-manager
      package again. 

 -- Frank S. Thomas <frank@thomas-alfeld.de>  Thu,  7 Jul 2005 18:45:03 +0200

boinc (4.70-1) experimental; urgency=low

  * New upstream release.
  * Built with g++-4.0.
  * debian/boinc-client.init:
    - Added status option to init.d script as proposed in Debian bug #291148.
  * debian/control.in:
    - Removed Build-Conflicts on automake1.4 and automake1.6, because we invoke
      aclocal-1.9 and automake-1.9 in debian/rules directly now.
    - Bumped Standards-Version from 3.6.1 to 3.6.2, no changes required.
  * debian/rules:
    - Use 'i686-linux-gnu' as default DEB_BUILD_GNU_TYPE on 'i486-linux-gnu'.
      It is still possible to override DEB_BUILD_GNU_TYPE with the
      BOINC_BUILD_TYPE variable.
    - Added '--enable-client' and '--enable-server' as configure flags.
  * Added missing options to boinc-client manpage.

 -- Frank S. Thomas <frank@thomas-alfeld.de>  Thu,  7 Jul 2005 18:00:03 +0200

boinc (4.45a-1) experimental; urgency=low

  * New upstream release.
  * debian/control.in:
    - Moved all packages into non-free section, because RSAEuro's license
      does not comply with DFSG #6 (No Discrimination Against Fields of
      Endeavor). The RSAEuro license is included in debian/copyright.

 -- Frank S. Thomas <frank@thomas-alfeld.de>  Fri, 10 Jun 2005 16:39:21 +0200

boinc (4.40-1) experimental; urgency=low

  * New upstream release.
  * Disabled the boinc-manager package, because it build depends on
    wxWidgets 2.6 which is not in Debian yet.
  * debian/control.in:
    - Added Steffen Moeller and myself to Uploaders.