@@ -1,6 +1,7 @@
 #! /bin/sh
 # Debian init.d script for the BOINC core client
-# Copyright (C) 2005 Frank S. Thomas <frank@thomas-alfeld.de>
+# Copyright (C) 2005 Debian BOINC Maintainers 
+#                    <pkg-boinc-devel@lists.alioth.debian.org>
 #
 # This file is licensed under the terms of the GNU General Public License,
 # Version 2 or any later version published by the Free Software Foundation.
@@ -38,6 +39,7 @@ fi
 PIDFILE=/var/run/boinc.pid
 DESC="BOINC core client"
 NAME=`basename $BOINC_CLIENT`
+BOINC_OPTS="-redirectio -dir $BOINC_DIR $BOINC_OPTS"
 
 is_running()
 {
@@ -67,7 +69,7 @@ start()
   echo -n "Starting $DESC: $NAME"
   start-stop-daemon --start --quiet --background --pidfile $PIDFILE \
     --make-pidfile --user $BOINC_USER --chuid $BOINC_USER --chdir $BOINC_DIR \
-    --exec $BOINC_CLIENT -- -redirectio $BOINC_OPTS
+    --exec $BOINC_CLIENT -- $BOINC_OPTS
   echo "."
 }
 
