@@ -1,0 +1,25 @@
+#!/bin/sh
+# postrm script for boinc-client
+
+set -e
+
+case "$1" in
+    purge)
+        rm -rf /var/lib/boinc-client
+
+        deluser --quiet boinc >/dev/null || true
+        delgroup --quiet boinc >/dev/null || true
+    ;;
+
+    remove|upgrade|failed-upgrade|abort-install|abort-upgrade|disappear)
+    ;;
+
+    *)
+        echo "postrm called with unknown argument \`$1'" >&2
+        exit 1
+    ;;
+esac
+
+#DEBHELPER#
+
+exit 0
