@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Debian BOINC Maintainers <pkg-boinc-devel@lists.alioth.debian.org>
 Uploaders: Frank S. Thomas <frank@thomas-alfeld.de>, Steffen Moeller <moeller@pzr.uni-rostock.de>
 Standards-Version: 3.6.2
-Build-Depends: @cdbs@, libmysqlclient12-dev, freeglut-dev, libwxgtk2.6-dev, automake1.9 (>= 1.9.3), autoconf (>= 2.59), docbook2x
+Build-Depends: @cdbs@, libmysqlclient12-dev, freeglut-dev, libwxgtk2.6-dev, automake1.9 (>= 1.9.3), autoconf (>= 2.59), docbook2x, docbook-xml
 
 Package: boinc-client
 Section: non-free/net
