@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <!-- 
- This is the manual page for the BOINC manager (boincmgr), a monitor and control
- utility for the core client.
+ This is the manual page for the BOINC manager (boincmgr), a monitor and
+ control utility for the core client.
   
  This file is licensed under the terms of the GNU General Public License,
  Version 2 or any later version published by the Free Software Foundation.
 
- Copyright 2005 - The Debian BOINC Maintainers 
-                  <pkg-boinc-devel@lists.alioth.debian.org>
+ Copyright 2005 Debian BOINC Maintainers 
+                <pkg-boinc-devel@lists.alioth.debian.org>
 -->
 
 <!DOCTYPE refentry PUBLIC "-//OASIS//DTD DocBook XML V4.2//EN"
