@@ -1,7 +1,7 @@
 #!/usr/bin/make -f
 
 # Remember to comment this before tagging for a release.
-#DEB_AUTO_UPDATE_DEBIAN_CONTROL := yes
+DEB_AUTO_UPDATE_DEBIAN_CONTROL := yes
 
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/autotools.mk
