@@ -5,10 +5,13 @@ boinc (4.71-1) UNRELEASED; urgency=low
   * The boinc-client package now includes the boinc_cmd program, a command
     tool that provides an interactive command-line interface to the BOINC
     core client.
+  * postinst etc...
   * debian/control.in:
     - Added libwxgtk2.6-dev to Build-Depends and enabled the boinc-manager
-      package again. 
-
+      package again.
+    - Added docbook-xml to Build-Depends.FTBS without docbook-xml
+      Adrian Zaugg
+      
  -- Frank S. Thomas <frank@thomas-alfeld.de>  Thu,  7 Jul 2005 18:45:03 +0200
 
 boinc (4.70-1) experimental; urgency=low
